--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content=
     "width=device-width, initial-scale=1.0">
     <style>
+      h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
    body {
   font-family: lora, serif;
 }
