--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </title>
     <meta name="viewport" content=
     "width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='index.css' type='text'/>
+    <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
     <h1>
