--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </h1>
     
     <p>
-        I am a podcast producer living in Brooklyn, NY. I am interested in histories of science and technology, experimental audio narratives, and oddball theories of all sorts. 
+        I am a podcast producer living in Brooklyn, NY, interested in histories of science and technology, experimental audio narratives, and oddball theories of all sorts. 
     </p>
     <br>
     <h4>
